# learnPython

./: README.md  pyproject.toml  python.ipynb
libraries/dtale/: dtale.ipynb
libraries/openpyxl/: NewGrades.xlsx  OpenPyXL.ipynb  py_made.xlsx  updated_py_made.xlsx  vgsales.xlsx  vgsales_updated.xlsx
libraries/pandas/: pandas.ipynb
libraries/pyyaml/: complex.yml  example.yml  game_config.yml  jake.yml  pyyaml.ipynb
libraries/xlsxwriter/: py_made.xlsx  xlsxwriter.ipynb
libraries/xlwings/: xlwings.ipynb
